some ui changes

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,4 +1,6 @@
 @import "tailwindcss";
+@import url('https://fonts.googleapis.com/css2?family=Comfortaa:wght@300..700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap');
 
 ::-webkit-scrollbar {
   width: 8px;
@@ -27,6 +29,7 @@
 * {
   scrollbar-width: thin;
   scrollbar-color: rgba(99, 102, 241, 0.4) transparent;
+  font-family: Roboto;
 }
 
 
@@ -36,7 +39,7 @@
 }
 
 .cl-formButtonPrimary{
-  background-color: rgb(59 130 246);
+  background-color: rgb(38, 95, 226);
 }
 
 .cl-internal-2iusy0 {
